# nys-air-quality

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: daily.csv  sensor_meta_cache.json
notebooks/: 01_daily_run.ipynb
notes/: 2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  (+56 more)
scripts/: run_daily.py
src/nys_aq/: __init__.py  daily.py
