[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nys-aq"
version = "0.1.0"
description = "Daily NYS air quality snapshot using OpenAQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "tzdata>=2024.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]